--- a/petdev/package.json
+++ b/petdev/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "react": "^19.1.0",
